--- a/Views/Emprestimo/Index.cshtml
+++ b/Views/Emprestimo/Index.cshtml
@@ -26,10 +26,10 @@
                 @foreach(var emprestimo in Model)
                 {
                     <tr>
-                        <th scope="row">@emprestimo.Recebedor</th>
-                        <td>@emprestimo.Fornecedor</td>
-                        <td>@emprestimo.LivroEmprestado</td>
-                        <td>@emprestimo.dataUltimaAtualizacao</td>
+                        <th class="align-middle" scope="row">@emprestimo.Recebedor</th>
+                        <td class="align-middle">@emprestimo.Fornecedor</td>
+                        <td class="align-middle">@emprestimo.LivroEmprestado</td>
+                        <td class="align-middle">@emprestimo.dataUltimaAtualizacao</td>
                         <td>
                             <a asp-controller="Emprestimo" asp-action="Editar" asp-route-id="@emprestimo.Id" class="btn btn-warning mx-2">Editar</a>
                             <a asp-controller="Emprestimo" asp-action="Excluir" asp-route-id="@emprestimo.Id" class="btn btn-danger mx-2">Excluir</a>
